--- a/PackageEasy/PackageEasy/Views/Dialogs/PasswordDialog.xaml
+++ b/PackageEasy/PackageEasy/Views/Dialogs/PasswordDialog.xaml
@@ -6,7 +6,6 @@
         xmlns:local="clr-namespace:PackageEasy.Views.Dialogs"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
-        xmlns:lang="clr-namespace:PackageEasy.Common.Data;assembly=PackageEasy.Common"
         ShowInTaskbar="False"
        
         AllowsTransparency="True" WindowStyle="None" ResizeMode="NoResize" KeyDown="Window_KeyDown" Background="Transparent"  Foreground="{StaticResource mainForeground}" Loaded="Window_Loaded" Height="120" Width="300"
@@ -46,11 +45,11 @@
             </Border>
             <Border Grid.Row="1" Background="{DynamicResource MainWorkAreaBackgroud}">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <TextBlock Text="密码：" VerticalAlignment="Center" lang:LanguageManager.LangText="密码："></TextBlock>
+                    <TextBlock d:Text="密码：" VerticalAlignment="Center" Text="{DynamicResource PasswordBox}"></TextBlock>
                     <PasswordBox Width="220" Style="{StaticResource CommonPasswordBox}" Height="30" x:Name="password"></PasswordBox>
                 </StackPanel>
             </Border>
-            <Button Height="30" Grid.Row="2" Content="确定" Click="Button_Click_1" lang:LanguageManager.LangText="确定" Margin="0,5,0,5" Style="{StaticResource CommonButtonStyle}" Width="80"></Button>
+            <Button Height="30" Grid.Row="2" d:Content="确定" Click="Button_Click_1" Content="{DynamicResource Yes}" Margin="0,5,0,5" Style="{StaticResource CommonButtonStyle}" Width="80"></Button>
 
         </Grid>
     </Border>
