--- a/PackageEasy/PackageEasy/Views/Tools/SettingControl.xaml
+++ b/PackageEasy/PackageEasy/Views/Tools/SettingControl.xaml
@@ -23,12 +23,12 @@
             <StackPanel Orientation="Horizontal"  >
                 <TextBlock d:Text="编译器路径:"  Foreground="{StaticResource mainForeground}"  Text="{DynamicResource SettingCompilePath}" VerticalAlignment="Center"></TextBlock>
                 <TextBox Style="{StaticResource CommonTextBox}" Text="{Binding MakensisPath,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" IsReadOnly="True" MinWidth="120" Margin="5,0,0,0"></TextBox>
-                <Button Width="30" Height="25" Style="{StaticResource CommonButtonStyle}" Content="..." Margin="5,0,0,0"></Button>
+                <Button Width="30" Height="25" Style="{StaticResource CommonButtonStyle}" Command="{Binding SetNisiCommand}" Content="..." Margin="5,0,0,0"></Button>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin="0,10,0,0" >
                 <TextBlock d:Text="帮助文档："   Foreground="{StaticResource mainForeground}"  Text="{DynamicResource SettingNsisHelper}" VerticalAlignment="Center"></TextBlock>
                 <TextBox Style="{StaticResource CommonTextBox}" Text="{Binding NSISHelperPath,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" IsReadOnly="True" MinWidth="120" Margin="5,0,0,0"></TextBox>
-                <Button Width="30" Height="25" Style="{StaticResource CommonButtonStyle}" Content="..." Margin="5,0,0,0"></Button>
+                <Button Width="30" Height="25" Style="{StaticResource CommonButtonStyle}" Command="{Binding HelperCommand}" Content="..." Margin="5,0,0,0"></Button>
             </StackPanel>
         </StackPanel>
         <StackPanel Grid.Column="1" Margin="10,10,0,0" d:Visibility="Visible" Visibility="{Binding IsChecked,ElementName=theme,Converter={StaticResource BoolToVisibilityConverter}}">
